<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/defenses_group_title">
        <CheckBoxPreference
            android:defaultValue="@bool/myFalse"
            android:key="hide_maxed_defenses"
            android:summary="@string/hide_maxed_level_defenses_summary"
            android:title="@string/hide_maxed_level_defenses" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/troops_group_title">

        <CheckBoxPreference
            android:defaultValue="@bool/myFalse"
            android:key="hide_maxed_troops"
            android:summary="@string/hide_maxed_level_troops_summary"
            android:title="@string/hide_maxed_level_troops" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/misc">

        <ListPreference
            android:key="default_screen"
            android:title="@string/title_list_preference"
            android:summary="@string/summary_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entries_list_preference"
            android:dialogTitle="@string/dialog_title_list_preference" />

        <!--

        <Preference
            android:key="@string/revoke_permission_button"
            android:summary="@string/revoke_dialog_summary"
            android:title="@string/revoke_pref_title" />
            -->

    </PreferenceCategory>
</PreferenceScreen>